# Renderer-Beginner

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.run/: ExampleDepthDiffuse.run.xml  LineWireframe.run.xml
0-Getting-Started/: CMakeLists.txt  README.md  main.cc  main.cpp  main.h
1-Line/: 1st-attempt.cpp  2nd-attempt.cpp  3rd-attempt.cpp  4th-attempt.cpp  5th-attempt.cpp  CMakeLists.txt  README.md  first-attempt.cpp  first-attempt.h  line_3.cc  line_5.cc  main.h  second-attempt.cpp  third-attempt.cpp  third-attempt.h  wireframe-rendering.cpp
1-Line/Lib/: CMakeLists.txt  geometry.h  model.h
2-Triangle/: CMakeLists.txt  README.md  barycentric-coordinate-method.cpp  example_triangle_illuminate.cc  example_triangle_random_colors.cc  illuminate-triangle.cpp  line-sweeping.cpp  line.cc  line.cpp  line.h  random-color-triangles.cpp  sweep-line.cpp  triangle-outline.cpp  triangle_barycentric.cc  triangle_outline.cc  triangle_sweep_line.cc
3-Depth/: CMakeLists.txt  README.md  depth_z_buffer.cc  draw_lines.cc  example_depth_diffuse.cc  example_depth_display.cc  example_depth_texture.cc
3-ZBuffer/: CMakeLists.txt  README.md  draw-lines.cpp  main.cpp  texture-example.cpp  y_buffer.cc  z-buffer.cpp
4-Perspective/: CMakeLists.txt  README.md
Assets/Models/: README.md  african_head_diffuse.tga  african_head_spec.tga
Lib/: CMakeLists.txt  geometry.cpp  geometry.h  line.cc  line.h  model.cc  model.cpp  model.h  tgaimage.cc  tgaimage.h
